# 2026-20712886

./: .gitignore  README.md  git-cheat-sheet.txt  hi_and_date.cmd
WS3/: lib.cpp  main.cpp
WS4_release/WS4_dynamic_release/lib/: adder.lib
WS4_release/WS4_static_release/lib/: adder.lib
WS5_docs/html/: adder_8h.html  files.html  globals.html  globals_func.html  index.html  navtreedata.js
WS6/Exercise1/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  ModelPartList.cpp  ModelPartList.h  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.cpp  optiondialog.h  optiondialog.ui
Worksheet4/Calc/: CMakelists.txt  calc.cpp
Worksheet4/hello_cmake/: CMakelists.txt  hello.cpp
docs/: adder_8h_source.html
